fix: fixing body background for every page and language change
- change template and styles language from Spanish to English
- fixed body background image to cover the entire body in every page
- Added signup route javascript
- Show a message when the user doesn't have any posts

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,7 +39,8 @@ body {
   flex-direction: column;
   margin: 0;
   background-image: url(../img/fondo.png);
-  background-size: 100%;
+  background-size: cover;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   font-family: sans-serif;
   height: 100vh;
@@ -52,7 +53,7 @@ main {
   place-items: center;
 }
 
-.container2 {
+header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,7 +74,6 @@ main {
 }
 
 /* Navbar Left */
-
 
 .nav-main ul {
   display: flex;
@@ -123,7 +123,7 @@ hr {
 }
 
 @media screen and (min-width: 640px) {
-  .container2 {
+  header {
     flex-direction: row;
   }
 
