--- a/static/css/verpublicaciones.css
+++ b/static/css/verpublicaciones.css
@@ -1,20 +1,23 @@
-body {
-  margin: 0;
-  padding: 0;
-  background: url(../img/fondo.png) repeat center top /*#2A2740*/;
-  background-size: cover;
-  font-family: sans-serif;
-  height: 100vh;
+.no-posts {
+  display: flex;
+  gap: .5rem;
+  flex-direction: column;
 }
 
-.cuerpo {
-  padding-block: 2rem;
-  padding-inline: 1rem;
+.no-posts p {
+  color: white;
+  font-size: 1.5rem;
+  text-align: center;
+
 }
 
-p, h1, h2, h3, h4 {
-  margin: 0;
-  padding: 0;
+.no-posts p a {
+  color: gold;
+  text-decoration: underline;
+}
+
+.no-posts p a:hover {
+  color: rgb(244, 195, 48);
 }
 
 .profile-header {
@@ -83,7 +86,7 @@ p.username {
   max-width: 310px;
 }
 
-.port-container .post-user {
+.post-container .post-user {
   display: flex;
   gap: 1rem;
   align-items: center;
